--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext {
+        // Sdk and tools
+        min_sdk_version = 16
+        target_sdk_version = 25
+        compile_sdk_version = 25
+        build_tools_version = '25.0.2'
+
+        // App dependencies
+        support_library_version = '25.4.0'
+        constraint_layout_version = '1.1.0-beta1'
+        espresso_core_version = '2.2.2'
+        junit_version = '4.12'
+        runner_version = '0.5'
+        // kotlin
+        kotlin_version = "1.1.3-2"
+        anko_version = "0.10.1"
+        // rx permission
+        rx_permissions = 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+        //rxbinding
+        rx_binding_version = '2.0.0'
+        rx_binding_appcompat = "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rx_binding_version"
+        rx_binding = "com.jakewharton.rxbinding2:rxbinding:$rx_binding_version"
+        // rxLifeRecycle
+        rx_liferecycle_version = '2.1.0'
+        rx_liferecycle = "com.trello.rxlifecycle2:rxlifecycle:$rx_liferecycle_version"
+        rx_liferecycle_android = "com.trello.rxlifecycle2:rxlifecycle-android:$rx_liferecycle_version"
+        rx_liferecyclecomponents = "com.trello.rxlifecycle2:rxlifecycle-components:$rx_liferecycle_version"
+        butterknife_version = '8.0.1'
+        dart_version = '2.0.2'
+    }
     repositories {
         google()
         jcenter()
@@ -21,6 +50,7 @@ allprojects {
         jcenter()
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
