--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ buildscript {
         rx_liferecyclecomponents = "com.trello.rxlifecycle2:rxlifecycle-components:$rx_liferecycle_version"
         butterknife_version = '8.0.1'
         dart_version = '2.0.2'
+        gson_version = '2.8.0'
     }
     repositories {
         google()
