feature: Making the forecast list clickable

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     androidTestImplementation "com.android.support.test:runner:$runner_version"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_core_version"
     compile "com.google.code.gson:gson:$gson_version"
+    compile "com.squareup.picasso:picasso:$picasso_version"
 }
