--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ buildscript {
         butterknife_version = '8.0.1'
         dart_version = '2.0.2'
         gson_version = '2.8.0'
+        picasso_version = '2.5.2'
     }
     repositories {
         google()
