--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ buildscript {
         junit_version = '4.12'
         runner_version = '0.5'
         // kotlin
-        kotlin_version = "1.1.4-3"
-        anko_version = "0.10.1"
+        kotlin_version = '1.1.2-5'
+        anko_version = '0.10.0'
         // rx permission
         rx_permissions = 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
         //rxbinding
