bugfix: Settings screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:parentActivityName=".ui.activities.MainActivity"
-            android:name=".ui.activities.DetailActivity">
+            android:name=".ui.activities.DetailActivity"
+            android:parentActivityName=".ui.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.activities.MainActivity"
-                />
+                android:value=".ui.activities.MainActivity" />
         </activity>
+        <activity android:name=".ui.activities.SettingsActivity"></activity>
     </application>
 
 </manifest>
